<resources>
    <string name="app_name">Local Storage</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="school">School</string>
    <string name="sign_up">Sign up</string>
    <string name="user_details">User Details</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>